<resources>
    <string name="app_name">MiAU</string>

    <!--Common Area-->
    <string name="email_error">Escreva um e-mail válido</string>
    <string name="pwd_error">No mínimo 4 caracteres</string>

    <string name="dialog_positive">Salvar</string>
    <string name="dialog_negative">Cancelar</string>

    <!--Hints-->
    <string name="password_confirm_hint_text">Confirme a Senha</string>
    <string name="password_hint_text">Senha</string>
    <string name="name_hint_text">Nome</string>

    <!--Welcome Slider-->
    <string name="next">PRÓXIMO</string>
    <string name="skip">PULAR</string>
    <string name="start">ENTENDI</string>

    <string name="slide_1_title">Monitoramento Total</string>
    <string name="slide_1_desc">Possibilita monitorar desde consultas veterinárias e datas de vacinas, até nível de atividade, localização, alimentação e sinais vitais.</string>

    <string name="slide_2_title">Auxílio em Fuga</string>
    <string name="slide_2_desc">Todos os donos próximos à um pet perdido serão notificados para ajudar no resgate se possível.</string>

    <string name="slide_3_title">Mapa Interativo</string>
    <string name="slide_3_desc">Com o auxílio da própria comunidade, os estabelecimentos, parques, praias e trilhas que permitam pets podem ser verificado no nosso mapa interativo.</string>

    <string name="slide_4_title">Veterinários Também!</string>
    <string name="slide_4_desc">Todos que amam animais é bem vindo no MiAu, inclusive os veterinários. Eles podem ter uma lista de pacientes de forma a ter um contato contínuo com os pets.</string>

    <!--Login-->
    <string name="signup_text">Não tem conta? Clique aqui</string>

    <string name="login_error">Login Inválido</string>


    <!--Register User-->
    <string name="login_text">Já tem conta? Clique aqui</string>
    <string name="register_bt_text">Criar Conta</string>

    <string name="password_mismatch_error">As senhas não batem</string>
    <string name="register_error">Erro ao Cadastrar</string>


    <!--Bottom Navigation-->
    <string-array name="bnav_tab_name">
        <item>Mapa</item>
        <item>Pets</item>
        <item>Calendário</item>
        <!--<item>Perdidos</item>-->
        <item>Configuração</item>
    </string-array>

    <array name="bnav_tab_drawable">
        <item>@drawable/location_icon</item>
        <item>@drawable/paw_icon</item>
        <item>@drawable/calendar_icon</item>
        <!--<item>@drawable/location_icon</item>-->
        <item>@drawable/settings_icon</item>
    </array>

    <!--Search Map Menu-->
    <string name="smap_filter_title">Filtros</string>

    <!--Search Map Dialog-->
    <string name="smap_dialog_title">Escolha os filtros para o mapa</string>
    <array name="smap_dialog_options">
        <item>Veterinarios</item>
        <item>Restaurantes</item>
        <item>Praias</item>
        <item>Shoppings</item>
        <item>Hotéis</item>
    </array>

    <!--Register Pet-->
    <string name="pet_register_title">Cadastrar Pet</string>
    <string name="pet_register_add_photo">Clique para Adicionar uma Foto</string>
    <string name="pet_register_bt_text">Salvar</string>
    <string name="pet_register_breed_text">Raça</string>
    <string name="pet_register_error">Erro ao Cadastrar</string>

    <!--Pet Edit Menu-->
    <string name="pet_edit_title">Editar Pet</string>
    <string name="pet_del_title">Deletar Pet</string>
    <string name="pet_add_title">Adicionar Pet</string>

    <!--Pet Register-->
    <string name="pet_image_button_text">Foto</string>

    <!--Pet-->
    <string name="pet_info">Informações</string>
    <string name="pet_info_age">anos</string>
    <string name="pet_info_height">cm</string>
    <string name="pet_info_weight">kg</string>
    <string name="pet_location">Localização</string>
    <string name="pet_led_strip">Luz Noturna</string>
    <string name="pet_led_strip_switch">Ligar</string>
    <string name="pet_notification">Notificações</string>
    <string name="pet_feeding_times">Horários de Comida</string>
    <string name="pet_activityLevel">Nível de Atividade</string>
    <string name="pet_eatingHabits">Hábitos Alimentares</string>

        <!--Charts-->
        <string name="pet_activity_lvl_dataSet">Tempo em alta atividade (min)</string>
        <string name="pet_eating_habit_dataSet">Quantidade de comida (g)</string>

        <!--Edit Pet-->
        <string name="dialog_pet_breed">Raça</string>
        <string name="dialog_pet_age">Idade</string>
        <string name="dialog_pet_sex">Sexo :</string>
        <string name="dialog_pet_female">Fêmea</string>
        <string name="dialog_pet_male">Macho</string>
        <string name="dialog_pet_height">Altura (cm)</string>
        <string name="dialog_pet_weight">Peso (Kg)</string>

        <!--Feeding Time-->
        <string name="dialog_feeding_amount">Quantidade (g)</string>
        <string name="dialog_feeding_time">Hora</string>
        <string name="dialog_feeding_title">Adicione um horário de comida</string>

        <!--Notification-->
        <string name="dialog_notification_name">Nome</string>
        <string name="dialog_notification_date">Data</string>
        <string name="dialog_notification_time">Hora</string>
        <string name="notification_dialog_title">Criar uma notificação</string>

    <!--Settings-->
    <string name="user_settings">Perfil</string>
    <string name="logout_settings">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
