<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etDialogBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:hint="@string/dialog_pet_breed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/etDialogAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/dialog_pet_age"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_pet_sex"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <RadioGroup
            android:id="@+id/rgDialogSex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/rbDialogFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_pet_female" />

            <RadioButton
                android:id="@+id/rbDialogMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_pet_male" />
        </RadioGroup>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDialogHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/dialog_pet_height"/>


        <EditText
            android:id="@+id/etDialogWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/dialog_pet_weight"/>
    </LinearLayout>

</LinearLayout>